# private-ide

./: CMakeLists.txt  README.md  qt6-three-panel-app.cpp  tester.pro
